idf_component_register(
    SRCS
        "main.c"
        "tuya_crypto.c"
        "tuya_packet.c"
        "tuya_ble_client.c"
        "udp_logger.c"
        "web_server.c"
        "mqtt_ha.c"
    INCLUDE_DIRS "."
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        bt
        mbedtls
        esp_timer
        esp_event
        app_update
        esp_https_ota
        esp_http_client
        esp_http_server
        mqtt
)
